[tool.poetry]
name = "music-stage-plot"
version = "0.1.0"
description = ""
authors = ["Adrien Bellanger <darktable@bellanger-fr.de>"]

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.9"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
